--- a/templates/login.tmpl.html
+++ b/templates/login.tmpl.html
@@ -8,8 +8,8 @@
 		<link rel="stylesheet" href="static/assets/css/bootstrap.css">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<link rel="icon" type="image/png" sizes="16x16" href="../../assets/images/favicon.png">
-		<link href="static/assets/css/style.css" rel="stylesheet">
+		<link rel="icon" type="image/png" sizes="16x16" href="/static/assets/images/favicon.png">
+		<link href="/static/assets/css/style.css" rel="stylesheet">
 		<meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Tell the browser to be responsive to screen width -->
@@ -20,10 +20,10 @@
       rel="icon"
       type="image/png"
       sizes="16x16"
-      href="static/assets/images/favicon.png"
+      href="/static/assets/images/favicon.png"
     />
     <!-- Custom CSS -->
-    <link href="static/dist/css/style.min.css" rel="stylesheet" />
+    <link href="/static/dist/css/style.min.css" rel="stylesheet" />
  
 		
 		
@@ -85,9 +85,7 @@
                     </div>
 					<select class="form-control form-control-lg" name="selDep">
 						<option value="0">กรุณาเลือกหน่วยงาน</option>
-							{{range .shDep}}
-								<option value="{{.DepID}}">{{.DepName}}</option>
-							{{end}}
+							
 					</select>
                    
                   </div>
@@ -173,9 +171,9 @@
     <!-- ============================================================== -->
     <!-- All Required js -->
     <!-- ============================================================== -->
-    <script src="static/assets/libs/jquery/dist/jquery.min.js"></script>
+    <script src="/static/assets/libs/jquery/dist/jquery.min.js"></script>
     <!-- Bootstrap tether Core JavaScript -->
-    <script src="static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <!-- ============================================================== -->
     <!-- This page plugin js -->
     <!-- ============================================================== -->
