--- a/templates/login.tmpl.html
+++ b/templates/login.tmpl.html
@@ -5,7 +5,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>เข้าสู่ระบบ </title>
-		<link rel="stylesheet" href="static/assets/css/bootstrap.css">
+		<link rel="stylesheet" href="/static/assets/css/bootstrap.css">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width,initial-scale=1">
 		<link rel="icon" type="image/png" sizes="16x16" href="/static/assets/images/favicon.png">
@@ -62,7 +62,7 @@
           <div id="loginform">
             <div class="text-center pt-3 pb-3">
               <span class="db"
-                ><img src="static/assets/images/logo.png" alt="logo"
+                ><img src="/static/assets/images/logo.png" alt="logo"
               /></span>
             </div>
             <!-- Form -->
@@ -137,9 +137,7 @@
                   <div class="form-group">
                   <div class="text-center">
 				  <br>
-              <span class="text-white"
-                >กลุ่มพัฒนาการใช้คอมพิวเตอร์และเครือข่าย ศูนย์เทคโนโลยีสารสนเทศ  <br> เบอร์ติดต่อ 02-2718000 ต่อ 1113</span
-              >
+             
             </div>
                   </div>
                 </div>
@@ -151,7 +149,7 @@
                 <div class="col-12">
                   <div class="form-group">
                     <div class="pt-3">
-					 <a href="static/pass.pdf">
+					 <a href="/static/pass.pdf">
                       <button
                         class="btn btn-danger float-end text-white"
                         type="button"
