--- a/templates/login.tmpl.html
+++ b/templates/login.tmpl.html
@@ -1,185 +1,2 @@
 
-<!DOCTYPE html>
-<html lang="en" class="h-100">
-	
-	<head>
-		<meta charset="UTF-8">
-		<title>เข้าสู่ระบบ </title>
-		<link rel="stylesheet" href="/static/assets/css/bootstrap.css">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width,initial-scale=1">
-		<link rel="icon" type="image/png" sizes="16x16" href="/static/assets/images/favicon.png">
-		<link href="/static/assets/css/style.css" rel="stylesheet">
-		<meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <!-- Tell the browser to be responsive to screen width -->
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <title>เข้าสู่ระบบ </title>
-    <!-- Favicon icon -->
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="16x16"
-      href="/static/assets/images/favicon.png"
-    />
-    <!-- Custom CSS -->
-    <link href="/static/dist/css/style.min.css" rel="stylesheet" />
- 
-		
-		
-		
-		
-	</head>
-	
-	<body>
-		<div class="main-wrapper">
-      <!-- ============================================================== -->
-      <!-- Preloader - style you can find in spinners.css -->
-      <!-- ============================================================== -->
-      <div class="preloader">
-        <div class="lds-ripple">
-          <div class="lds-pos"></div>
-          <div class="lds-pos"></div>
-        </div>
-      </div>
-      <!-- ============================================================== -->
-      <!-- Preloader - style you can find in spinners.css -->
-      <!-- ============================================================== -->
-      <!-- ============================================================== -->
-      <!-- Login box.scss -->
-      <!-- ============================================================== -->
-      <div
-        class="
-          auth-wrapper
-          d-flex
-          no-block
-          justify-content-center
-          align-items-center
-          bg-dark
-        "
-      >
-        <div class="auth-box bg-dark border-top border-secondary">
-          <div id="loginform">
-            <div class="text-center pt-3 pb-3">
-              <span class="db"
-                ><img src="/static/assets/images/logo.png" alt="logo"
-              /></span>
-            </div>
-            <!-- Form -->
-            <form
-              class="form-horizontal mt-3"
-              id="loginform"
-              action="/"
-			  method="POST"
-			  
-            >
-              <div class="row pb-4">
-                <div class="col-12">
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span
-                        class="input-group-text bg-success text-white h-100"
-                        id="basic-addon1"
-                        ><i class="mdi mdi-account fs-4"></i
-                      ></span>
-                    </div>
-					<select class="form-control form-control-lg" name="selDep">
-						<option value="0">กรุณาเลือกหน่วยงาน</option>
-							
-					</select>
-                   
-                  </div>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span
-                        class="input-group-text bg-warning text-white h-100"
-                        id="basic-addon2"
-                        ><i class="mdi mdi-lock fs-4"></i
-                      ></span>
-                    </div>
-                    <input
-                      type="Password"
-                      class="form-control form-control-lg"
-                      placeholder="Password"
-                      aria-label="Password"
-                      aria-describedby="basic-addon1"
-                      required=""
-					  name ="passDep"
-                    />
-                  </div>
-				</div>
-              </div>
-			  
-              <div class="row border-top border-secondary">
-                <div class="col-12">
-                  <div class="form-group">
-                    <div class="pt-3">
-					 
-                      <button
-                        class="btn btn-success float-end text-white"
-                        type="submit"
-                      >
-							เข้าสู่ระบบ
-                      </button>
-					 
-					  
-					  
-					  
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </form>
-          </div>
-		  <br>
-		   <div class="row border-top border-secondary">
-                <div class="col-12">
-                  <div class="form-group">
-                  <div class="text-center">
-				  <br>
-             
-            </div>
-                  </div>
-                </div>
-              </div>
-		
-			<!-- pass -->
-			<br>
-			<div class="row border-top border-secondary">
-                <div class="col-12">
-                  <div class="form-group">
-                    <div class="pt-3">
-					 <a href="/static/pass.pdf">
-                      <button
-                        class="btn btn-danger float-end text-white"
-                        type="button"
-                      >
-							Password
-                      </button>
-					 </a>
-                    </div>
-                  </div>
-                </div>
-            </div>
-			<!-- end pass -->
-        </div>
-      </div>
-      
-    </div>
-    <!-- ============================================================== -->
-    <!-- All Required js -->
-    <!-- ============================================================== -->
-    <script src="/static/assets/libs/jquery/dist/jquery.min.js"></script>
-    <!-- Bootstrap tether Core JavaScript -->
-    <script src="/static/assets/libs/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- ============================================================== -->
-    <!-- This page plugin js -->
-    <!-- ============================================================== -->
-    <script>
-      $(".preloader").fadeOut();
-    
-    </script>
-		</body>
-		
-	</html>
-	{{end}}
+sssss
