--- a/templates/teml/teml/login.tmpl.html
+++ b/templates/teml/teml/login.tmpl.html
@@ -14,7 +14,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <!-- Tell the browser to be responsive to screen width -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-     <title>เข้าสู่ระบบ </title>
+     <title>เข้าสู่ระบบ 00</title>
     <!-- Favicon icon -->
     <link
       rel="icon"
@@ -85,9 +85,7 @@
                     </div>
 					<select class="form-control form-control-lg" name="selDep">
 						<option value="0">กรุณาเลือกหน่วยงาน</option>
-							{{range .shDep}}
-								<option value="{{.DepID}}">{{.DepName}}</option>
-							{{end}}
+							 
 					</select>
                    
                   </div>
